update to 3.0.xxx.101